Fixing button contrast

--- a/nustyle.css
+++ b/nustyle.css
@@ -136,7 +136,7 @@ header {
 }
 
 .main-project button {
-  background-color: #ff6b00;
+  background-color: #ff7b00a8;
   width: 124px;
   height: 48px;
   border: none;
@@ -202,7 +202,7 @@ header {
 }
 
 .other-projects button {
-  background-color: #ff6b00;
+  background-color: #ff7b00a8;
   width: 100%;
   height: 48px;
   border: none;
@@ -245,7 +245,7 @@ header {
 }
 
 .about-me button {
-  background-color: #ff6b00;
+  background-color: #ff7b00a8;
   width: 161px;
   height: 48px;
   border: none;
@@ -364,7 +364,7 @@ header {
   padding: 12px;
   width: 131px;
   height: 48px;
-  background: #ff6b00;
+  background: #ff7b00a8;
   margin: 24px 122px;
   border: none;
   font-family: 'Inter';
